<resources>
    <string name="app_name">Phone</string>

    <!-- Call Type -->
    <string name="call_type_outgoing">Outgoing</string>
    <string name="call_type_incoming">Incoming</string>
    <string name="call_type_missed">Missed</string>
    <string name="call_type_blocked">Blocked</string>
    <string name="call_type_rejected">Rejected</string>
    <string name="call_type_other">Call type</string>

    <!--Call State-->
    <string name="status_call_active">Current call</string>
    <string name="status_call_connecting">Connecting…</string>
    <string name="status_call_dialing">Dialing…</string>
    <string name="status_call_disconnected">Disconnected</string>
    <string name="status_call_disconnecting">Disconnecting</string>
    <string name="status_call_holding">Call on hold</string>
    <string name="status_call_incoming">Incoming call</string>
    <string name="status_call_new">New</string>
    <string name="status_call_pulling_call">Pulling call</string>
    <string name="status_call_ringing">Ringing</string>
    <string name="status_call_select_phone_account">Select SIM</string>
    <string name="status_call_simulated_ringing">Simulated ringing</string>

    <!-- Notification -->
    <string name="active_call_notification_text">Call…</string>
    <string name="incoming_notification_channel">Incoming Calls</string>
    <string name="ongoing_notification_channel">Ongoing Calls</string>
    <string name="action_answer">Answer</string>
    <string name="action_hangup">Hangup</string>
    <string name="action_mute">Mute</string>
    <string name="action_hold">Hold</string>
    <string name="action_speaker">Speaker</string>
    <string name="action_keyboard">Keyboard</string>

    <!-- Common words -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="voicemail">Voice mail</string>
    <string name="unsaved">Unsaved</string>
    <string name="add_error">Error</string>
    <string name="contact_not_found">Contact not found</string>

    <!-- Passcode lock -->
    <string name="digit_one" translatable="false">1</string>
    <!-- In the English locale, digit 1 has no text on it. This is simply empty space. If your locale has text on digit 1, then translate-->
    <string name="digit_one_text">&#8203;</string>
    <string name="digit_two" translatable="false">2</string>
    <string name="digit_two_text">ABC</string>
    <string name="digit_three" translatable="false">3</string>
    <string name="digit_three_text">DEF</string>
    <string name="digit_four" translatable="false">4</string>
    <string name="digit_four_text">GHI</string>
    <string name="digit_five" translatable="false">5</string>
    <string name="digit_five_text">JKL</string>
    <string name="digit_six" translatable="false">6</string>
    <string name="digit_six_text">MNO</string>
    <string name="digit_seven" translatable="false">7</string>
    <string name="digit_seven_text">PQRS</string>
    <string name="digit_eight" translatable="false">8</string>
    <string name="digit_eight_text">TUV</string>
    <string name="digit_nine" translatable="false">9</string>
    <string name="digit_nine_text">WXYZ</string>
    <string name="digit_zero" translatable="false">0</string>
    <string name="digit_zero_text" translatable="false">+</string>

    <string name="type_birthday">Birthday %s</string>
    <string name="state_call_ringing">Incoming</string>
    <string name="state_call_active">Active call</string>
    <string name="unknown_caller">Unknown caller</string>
    <string name="open_keyboard">Open keyboard</string>
    <string name="close_keyboard">Close keyboard</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_first">first</string>
    <string name="favorites_last">last</string>
    <string name="favorites_first_button">Favorites - first</string>
    <string name="favorites_last_button">Favorites - last</string>
    <string name="favorites_border_color">Border color</string>
    <string name="favorites_size">Size:</string>
    <string name="favorites_columns_count">Columns count:</string>
    <string name="favorites_border_width">Border width:</string>
    <string name="favorites_sample">Sample</string>
    <string name="available_actions">Available actions</string>
    <string name="list_divider">Разделитель в истории звонков</string>

    <string name="themes">Theme</string>
    <string name="theme_light">light</string>
    <string name="theme_gray">gray</string>
    <string name="theme_dark">dark</string>
    <string name="theme_dark2">dark 2</string>
    <string name="actions">Actions</string>
    <string name="background">Background</string>
    <string name="remove_background">Remove background</string>
    <string name="contact_tab_history">History</string>
    <string name="contact_tab_actions">Contact</string>
    <string name="contact_tab_settings">Settings</string>
    <string name="settings_tab_appearance">Appearance</string>
    <string name="settings_tab_actions">Actions</string>
    <string name="settings_tab_phone">Phone</string>
    <string name="settings_tab_about">About</string>
    <string name="dialer_settings">Dialer</string>
    <string name="default_dialer">Set default</string>
    <string name="sim_usage_settings">SIM usage</string>
    <string name="sim_selection_title">Select SIM for call</string>
    <string name="sim_used">SIM used</string>
    <string name="sim_operator">Operator</string>
    <string name="photo">Photo</string>
    <string name="background_default">Default</string>
    <string name="background_custom">Custom</string>
    <string name="digit_star" translatable="false">*</string>
    <string name="digit_jail" translatable="false">#</string>

    <string name="sim_state_absent">empty</string>
    <string name="sim_state_locked">locked</string>
    <string name="sim_state_not_ready">not ready</string>
    <string name="sim_state_error">error</string>
    <string name="sim_state_network_locked">network locked</string>
    <string name="sim_state_ready">ready</string>

    <string name="microphone">Microphone</string>
    <string name="speaker">Speaker</string>
    <string name="sim">SIM</string>
    <string name="decline_call">Decline call</string>
    <string name="accept_call">Accept call</string>

    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="select_number">Select number</string>

    <!-- About activity -->
    <string name="share_app">Share app</string>
    <string name="share_message">Check this phone app:\n%s</string>
    <string name="share_via">Share</string>
    <string name="share_url" translatable="false">https://play.google.com/store/apps/details?id=com.asinosoft.cdm</string>
    <string name="privacyPolicy_url" translatable="false">https://asinosoft.ru/cdm_privacy_policy.html</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_url" translatable="false">market://details?id=com.asinosoft.cdm</string>
    <string name="licenses">Licenses</string>
    <string name="version">Version %s</string>

    <string name="copyright" translatable="false">© AsinoSoft 2021</string>

    <!-- InputText -->
    <string name="menu_paste">Paste</string>
    <string name="menu_copy">Copy</string>

    <string name="copied">Copied to clipboard</string>
    <string name="privacy_policy">Privacy policy</string>

    <!-- Permission rationale fragment -->
    <string name="permission_rationale">
        We need access to call logs and contact book for name and photo
    </string>
    <string name="give_permission">Permit</string>
    <string name="request_draw_overlays">Please allow displaying over other apps</string>

    <!-- Call history context menu -->
    <string name="copy_number">Copy number</string>
    <string name="delete_call_history_record">Delete call history record</string>
    <string name="purge_contact_history">Purge contact history</string>
    <string name="purge_call_history">Purge call history</string>
    <string name="drag_me">Drag me up to accept Call. Or down to reject.</string>
    <string name="call_sim1">Call by SIM1</string>
    <string name="call_sim2">Call by SIM2</string>

    <plurals name="age">
        <item quantity="zero">%d years</item>
        <item quantity="one">%d year</item>
        <item quantity="two">%d years</item>
        <item quantity="few">%d years</item>
        <item quantity="many">%d years</item>
        <item quantity="other">%d years</item>
    </plurals>
</resources>
