<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OutfitSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/caption"
            style="@style/Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_theme_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light" />

            <RadioButton
                android:id="@+id/rb_theme_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_gray" />

            <RadioButton
                android:id="@+id/rb_theme_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark" />
        </RadioGroup>
    </LinearLayout>

</FrameLayout>