<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/button_mute"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:contentDescription="@string/action_mute"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/ic_mic_black_24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_hold"
        app:layout_constraintEnd_toStartOf="@+id/button_hold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_hold"
        app:tint="?android:attr/colorPrimary"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/button_hold"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:contentDescription="@string/action_hold"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/outline_pause_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/button_keypad"
        app:layout_constraintEnd_toStartOf="@id/button_speaker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button_mute"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:attr/colorPrimary"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/button_speaker"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:contentDescription="@string/action_speaker"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/ic_volume_on"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_hold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_hold"
        app:layout_constraintTop_toTopOf="@+id/button_hold"
        app:tint="?android:attr/colorPrimary"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/button_keypad"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:contentDescription="@string/action_keyboard"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/outline_dialpad_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_hold"
        app:layout_constraintVertical_bias="0.0"
        app:tint="?android:attr/colorPrimary"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/action_hangup"
        android:src="@drawable/outline_call_end_24"
        android:tint="@color/white"
        android:visibility="visible"
        app:fabCustomSize="72dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="36dp" />

</androidx.constraintlayout.widget.ConstraintLayout>