<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_holder2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notification_caller_name"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Caller name" />

    <ImageView
        android:id="@+id/sim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_caller_name"
        android:contentDescription="@string/sim"
        tools:src="@drawable/ic_sim1" />

    <TextView
        android:id="@+id/notification_call_status"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_caller_name"
        android:layout_toEndOf="@id/sim"
        android:textColor="?android:attr/colorAccent"
        android:alpha="0.8"
        android:visibility="visible"
        tools:text="Входящий вызов" />

    <TextView
        android:id="@+id/notification_call_time"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification_caller_name"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/notification_caller_name"
        android:alpha="0.8"
        android:visibility="gone"
        tools:text="00:00" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/notification_mic_off"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_oval"
            android:backgroundTint="@color/selector_button_icon"
            android:clickable="true"
            android:contentDescription="@string/microphone"
            android:focusable="true"
            android:src="@drawable/ic_mic_off_black_24dp"
            android:visibility="gone"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/notification_speaker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_oval"
            android:backgroundTint="@color/selector_button_icon"
            android:clickable="true"
            android:contentDescription="@string/speaker"
            android:focusable="true"
            android:src="@drawable/ic_volume_on"
            android:visibility="gone"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/notification_decline_call"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_oval"
            android:clickable="true"
            android:contentDescription="@string/decline_call"
            android:focusable="true"
            android:src="@drawable/ic_phone_down_red_vector"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/notification_accept_call"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_oval"
            android:clickable="true"
            android:contentDescription="@string/accept_call"
            android:focusable="true"
            android:src="@drawable/ic_phone_green_vector"
            android:visibility="visible" />

    </LinearLayout>


</RelativeLayout>