<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingBottom="100dp">

    <ImageView
        android:id="@+id/animated_arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/accept_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accept"
        app:srcCompat="@drawable/ic_small_arrow_up"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/animated_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/decline_call"
        app:layout_constraintBottom_toTopOf="@id/reject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_small_arrow_down"
        app:tint="@color/red" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/accept"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundImage"
        app:srcCompat="@drawable/ic_phone_green_vector" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/reject"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/RoundImage"
        app:srcCompat="@drawable/ic_phone_down_red_vector" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/handle"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:contentDescription="@string/drag_me"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@id/reject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accept"
        app:shapeAppearanceOverlay="@style/RoundImage"
        app:srcCompat="@drawable/ic_photo_default"
        app:strokeColor="?attr/civ_border_color"
        app:strokeWidth="6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
